--- a/src/_style.css
+++ b/src/_style.css
@@ -1,3 +1,9 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
+    color:white;
+}
+body{
+    background: rgb(35,0,129);
+    background: linear-gradient(167deg, rgba(35,0,129,1) 0%, rgba(181,0,255,1) 71%);
+    background-size: 100vmax 100vmax;
 }
