--- a/src/_style.css
+++ b/src/_style.css
@@ -43,7 +43,7 @@ body{
     font-size:16px;
     font-weight: bold;
     width:100%;
-    word-break: break-all;
+    word-break:normal;
 }
 
 .game:hover{
