--- a/src/_style.css
+++ b/src/_style.css
@@ -53,13 +53,18 @@ body{
 input[type=text]{
     all:unset;
     background-color: rgba(0,0,0,0.5);
-    margin:5px;
     padding:10px;
     border-radius: 100vw;
     height:15px;
+
 }
 #search{
     display:block;
-    margin:auto;
+    margin:5px auto;
+    width:50%;
+}
+#custom-url{
+    display:block;
+    margin:5px auto;
     width:50%;
 }
